<resources>
    <string name="app_name">SimpleDictionary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_note">Добавить слово</string>
    <string name="add">Добавить</string>
    <string name="word">Слово</string>
    <string name="translate">Перевод</string>
    <string name="example">Пример</string>
    <string name="edit">Изменить</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Повторите пароль</string>
    <string name="already_register">Уже есть аккаунт? Войдите</string>
    <string name="login">Войти</string>
    <string name="have_no_acc">Еще нет аккаунта?</string>
    <string name="empty_word_list">У Вас еще нет слов для изучения</string>
    <string name="fill_all_required_fields">Заполните необходимые поля</string>
    <string name="input_word">Введите слово</string>
    <string name="input_translate">Введите перевод</string>
    <string name="input_email">Введите корректный email</string>
    <string name="short_password">Слишком просто</string>
    <string name="different_password">Пароли не совпадают</string>
    <string name="smth_wrong">Упс, что-то пошло не так</string>
    <string name="Upssss">Ups</string>
    <string name="create_sentence">Составьте предложение</string>
</resources>