<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addNote.presentation.AddNoteFragment">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="1"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/app_margin"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/input_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/translate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name"
        android:maxLines="1"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/app_margin"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/inputExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_translate"
        android:layout_margin="@dimen/app_margin"
        android:importantForAutofill="no"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputExample"
        android:layout_margin="@dimen/app_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>